--- a/Web Scraping/data.ipynb
+++ b/Web Scraping/data.ipynb
@@ -4264,7 +4264,7 @@
     "    \"Soviet\"), 'Main Colonial Power'] = 'Russia'\n",
     "\n",
     "df.loc[df['Independence From'].str.contains(\n",
-    "    \"Netherlands\"), ['Independence From', 'Main Colonial Power']] = 'Netherlands'\n"
+    "    \"Netherlands|Nerlands\"), ['Independence From', 'Main Colonial Power']] = 'Netherlands'\n"
    ]
   },
   {
