--- a/Web Scraping/data.ipynb
+++ b/Web Scraping/data.ipynb
@@ -7940,7 +7940,8 @@
     "# Koreas\n",
     "data.loc[data['Country'].str.contains(\"Korea\"), 'Independence'] = 1948\n",
     "data.loc[data['Country'].str.contains(\"Korea\"), 'Independence From'] = 'Japan'\n",
-    "data.loc[data['Country'].str.contains(\"Korea\"), 'Main Colonial Power'] = 'Not Colonized'\n"
+    "data.loc[data['Country'].str.contains(\"Korea\"), 'Main Colonial Power'] = 'Not Colonized'\n",
+    "data.loc[data['Country'].str.contains(\"Korea\"), 'Continent'] = 'Asia'\n"
    ]
   },
   {
@@ -7950,17 +7951,17 @@
    "outputs": [],
    "source": [
     "# Armenia, Azerbaijan, Georgia, Kazakhstan\n",
-    "data.iloc[[7, 10, 63, 86], 1] = 1991\n",
-    "data.iloc[[7, 10, 63, 86], 2] = 'Soviet Union'\n",
-    "data.iloc[[10, 63, 86], 3] = 'Russia'\n",
+    "data.iloc[[7, 10, 65, 88], 1] = 1991\n",
+    "data.iloc[[7, 10, 65, 88], 2] = 'Soviet Union'\n",
+    "data.iloc[[10, 65, 88], 3] = 'Russia'\n",
     "\n",
     "# Cyprus\n",
-    "data.iloc[41, 1] = 1960\n",
-    "data.iloc[41, [2, 3]] = 'United Kingdom'\n",
+    "data.iloc[42, 1] = 1960\n",
+    "data.iloc[42, [2, 3]] = 'United Kingdom'\n",
     "\n",
     "# Armenia, Russia, Turkiye\n",
-    "data.iloc[[142, 180], [1, 2]] = 'Not Colonized'\n",
-    "data.iloc[[7, 142, 180], 3] = 'Not Colonized'\n"
+    "data.iloc[[144, 180], [1, 2]] = 'Not Colonized'\n",
+    "data.iloc[[7, 144, 180], 3] = 'Not Colonized'\n"
    ]
   },
   {
@@ -7971,7 +7972,7 @@
    "source": [
     "# Continents (Main continent)\n",
     "# Asia (Armenia, Azerbaijan, Cyprus, Georgia, Kazakhstan, Koreas, Turkiye)\n",
-    "data.iloc[[7, 10, 41, 63, 86, 125, 160, 180], 4] = 'Asia'\n",
+    "data.iloc[[7, 10, 42, 65, 88, 144, 180], 4] = 'Asia'\n",
     "\n",
     "# Europe\n",
     "data['Continent'] = data['Continent'].fillna('Europe')\n"
@@ -8011,48 +8012,14 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Cyprus</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>Georgia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>Kazakhstan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>Russia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Country Independence Independence From Main Colonial Power Continent\n",
-       "42       Cyprus          NaN               NaN                 NaN    Europe\n",
-       "65      Georgia          NaN               NaN                 NaN    Europe\n",
-       "88   Kazakhstan          NaN               NaN                 NaN    Europe\n",
-       "144      Russia          NaN               NaN                 NaN    Europe"
+       "Empty DataFrame\n",
+       "Columns: [Country, Independence, Independence From, Main Colonial Power, Continent]\n",
+       "Index: []"
       ]
      },
      "execution_count": 46,
