Added dataframe infos

--- a/Web Scraping/data.ipynb
+++ b/Web Scraping/data.ipynb
@@ -8169,6 +8169,115 @@
    "source": [
     "data.to_csv('../CSV/colonialism.csv')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Some info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 195 entries, 0 to 194\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   Country              195 non-null    object\n",
+      " 1   Independence         195 non-null    object\n",
+      " 2   Independence From    195 non-null    object\n",
+      " 3   Main Colonial Power  195 non-null    object\n",
+      " 4   Continent            195 non-null    object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 7.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom    64\n",
+       "France            25\n",
+       "Spain             23\n",
+       "Not Colonized     14\n",
+       "Portugal           7\n",
+       "Russia             7\n",
+       "Germany            5\n",
+       "Italy              3\n",
+       "Netherlands        2\n",
+       "Belgium            1\n",
+       "United States      1\n",
+       "Name: Main Colonial Power, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['Continent'] != 'Europe']['Main Colonial Power'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom    60\n",
+       "France            26\n",
+       "Spain             16\n",
+       "Not Colonized     10\n",
+       "Soviet Union       8\n",
+       "Portugal           6\n",
+       "United States      6\n",
+       "Belgium            3\n",
+       "Netherlands        2\n",
+       "Japan              2\n",
+       "Italy              2\n",
+       "Ethiopia           1\n",
+       "China              1\n",
+       "South Africa       1\n",
+       "Pakistan           1\n",
+       "Colombia           1\n",
+       "Australia          1\n",
+       "New Zealand        1\n",
+       "Malaysia           1\n",
+       "Sudan              1\n",
+       "Indonesia          1\n",
+       "Brazil             1\n",
+       "Name: Independence From, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['Continent'] != 'Europe']['Independence From'].value_counts()\n"
+   ]
   }
  ],
  "metadata": {
