Changing some "Main Colonial Power" values

--- a/Web Scraping/data.ipynb
+++ b/Web Scraping/data.ipynb
@@ -2469,7 +2469,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Cameroon</td>\n",
-       "      <td>Germany</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -2564,12 +2564,12 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>Burundi</td>\n",
-       "      <td>Germany</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>Rwanda</td>\n",
-       "      <td>Germany</td>\n",
+       "      <td>Belgium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
@@ -2694,7 +2694,7 @@
        "9                            Morocco              France\n",
        "10                             Ghana      United Kingdom\n",
        "11                            Guinea              France\n",
-       "12                          Cameroon             Germany\n",
+       "12                          Cameroon              France\n",
        "13                              Togo              France\n",
        "14                              Mali              France\n",
        "15                           Senegal              France\n",
@@ -2713,8 +2713,8 @@
        "28                        Mauritania              France\n",
        "29                      Sierra Leone      United Kingdom\n",
        "30                          Tanzania      United Kingdom\n",
-       "31                           Burundi             Germany\n",
-       "32                            Rwanda             Germany\n",
+       "31                           Burundi             Belgium\n",
+       "32                            Rwanda             Belgium\n",
        "33                           Algeria              France\n",
        "34                            Uganda      United Kingdom\n",
        "35                             Kenya      United Kingdom\n",
@@ -2767,7 +2767,9 @@
     "df.iloc[[8, 9], 1] = 'France'\n",
     "\n",
     "# Cameroon, Burundi, and Ruanda\n",
-    "df.iloc[[12, 31, 32], 1] = 'Germany'\n",
+    "# df.iloc[[12, 31, 32], 1] = 'Germany' # or\n",
+    "df.iloc[12, 1] = 'France' # and\n",
+    "df.iloc[[31, 32], 1] = 'Belgium'\n",
     "\n",
     "df['Main Colonial Power'] = df['Main Colonial Power'].str.strip()\n",
     "\n",
@@ -8215,15 +8217,15 @@
      "data": {
       "text/plain": [
        "United Kingdom    64\n",
-       "France            25\n",
+       "France            26\n",
        "Spain             23\n",
        "Not Colonized     14\n",
        "Portugal           7\n",
        "Russia             7\n",
-       "Germany            5\n",
+       "Belgium            3\n",
        "Italy              3\n",
        "Netherlands        2\n",
-       "Belgium            1\n",
+       "Germany            2\n",
        "United States      1\n",
        "Name: Main Colonial Power, dtype: int64"
       ]
