Minor alterations and creation of a .json file

--- a/Web Scraping/data.ipynb
+++ b/Web Scraping/data.ipynb
@@ -2469,7 +2469,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Cameroon</td>\n",
-       "      <td>France</td>\n",
+       "      <td>Germany</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -2564,12 +2564,12 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>Burundi</td>\n",
-       "      <td>Belgium</td>\n",
+       "      <td>Germany</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>Rwanda</td>\n",
-       "      <td>Belgium</td>\n",
+       "      <td>Germany</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
@@ -2694,7 +2694,7 @@
        "9                            Morocco              France\n",
        "10                             Ghana      United Kingdom\n",
        "11                            Guinea              France\n",
-       "12                          Cameroon              France\n",
+       "12                          Cameroon             Germany\n",
        "13                              Togo              France\n",
        "14                              Mali              France\n",
        "15                           Senegal              France\n",
@@ -2713,8 +2713,8 @@
        "28                        Mauritania              France\n",
        "29                      Sierra Leone      United Kingdom\n",
        "30                          Tanzania      United Kingdom\n",
-       "31                           Burundi             Belgium\n",
-       "32                            Rwanda             Belgium\n",
+       "31                           Burundi             Germany\n",
+       "32                            Rwanda             Germany\n",
        "33                           Algeria              France\n",
        "34                            Uganda      United Kingdom\n",
        "35                             Kenya      United Kingdom\n",
@@ -2757,7 +2757,7 @@
     "# Ethiopia\n",
     "df.iloc[3]['Main Colonial Power'] = 'Not Colonized'\n",
     "\n",
-    "# Libya and Somalia\n",
+    "# Libya, Somalia\n",
     "df.iloc[[5, 18], 1] = 'Italy'\n",
     "\n",
     "# Sudan, South Sudan, and Namibia\n",
@@ -2766,10 +2766,10 @@
     "# Tunisia and Morocco\n",
     "df.iloc[[8, 9], 1] = 'France'\n",
     "\n",
-    "# Cameroon, Burundi, and Ruanda\n",
-    "# df.iloc[[12, 31, 32], 1] = 'Germany' # or\n",
-    "df.iloc[12, 1] = 'France' # and\n",
-    "df.iloc[[31, 32], 1] = 'Belgium'\n",
+    "# Cameroon, Burundi, and Rwanda\n",
+    "df.iloc[[12, 31, 32], 1] = 'Germany' # or\n",
+    "# df.iloc[12, 1] = 'France' # and\n",
+    "# df.iloc[[31, 32], 1] = 'Belgium'\n",
     "\n",
     "df['Main Colonial Power'] = df['Main Colonial Power'].str.strip()\n",
     "\n",
@@ -6038,7 +6038,8 @@
     "df.iloc[[8, 9], 3] = 'Germany'\n",
     "\n",
     "# Vanuatu (Anglo-French Condominium)\n",
-    "# df.iloc[13, [2, 3]] = France\n"
+    "# df.iloc[13, [2, 3]] = 'France'\n",
+    "# df.iloc[13, [2, 3]] = ['France', 'United Kingdom']\n"
    ]
   },
   {
@@ -8169,7 +8170,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('../CSV/colonialism.csv')"
+    "data.to_csv('../data/colonialism.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing some info into lists for the .json\n",
+    "# Cameroon\n",
+    "data.at[data[data['Country'] == 'Cameroon'].index[0],\n",
+    "         'Main Colonial Power'] = ['Germany', 'France', 'United Kingdom']\n",
+    "data.at[data[data['Country'] == 'Cameroon'].index[0],\n",
+    "        'Independence'] = [1960, 1961]\n",
+    "data.at[data[data['Country'] == 'Cameroon'].index[0],\n",
+    "        'Independence From'] = ['France', 'United Kingdom']\n",
+    "\n",
+    "# Morocco\n",
+    "data.at[data[data['Country'] == 'Morocco'].index[0],\n",
+    "        'Main Colonial Power'] = ['France', 'Spain']\n",
+    "data.at[data[data['Country'] == 'Morocco'].index[0],\n",
+    "        'Independence From'] = ['France', 'Spain']\n",
+    "\n",
+    "# Somalia\n",
+    "data.at[data[data['Country'] == 'Morocco'].index[0],\n",
+    "        'Main Colonial Power'] = ['Italy', 'United Kingdom']\n",
+    "data.at[data[data['Country'] == 'Morocco'].index[0],\n",
+    "        'Independence From'] = ['Italy', 'United Kingdom']\n",
+    "\n",
+    "# Burundi, and Rwanda\n",
+    "data.at[data[data['Country'] == 'Burundi'].index[0],\n",
+    "         'Main Colonial Power'] = ['Germany', 'Belgium']\n",
+    "data.at[data[data['Country'] == 'Rwanda'].index[0],\n",
+    "        'Main Colonial Power'] = ['Germany', 'Belgium']\n",
+    "\n",
+    "# Vanuatu (Anglo-French Condominium)\n",
+    "data.at[data[data['Country'] == 'Vanuatu'].index[0],\n",
+    "        'Main Colonial Power'] = ['France', 'United Kingdom']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/colonialism.json', 'w', encoding='utf-8') as file:\n",
+    "    data.to_json(file, force_ascii=False)\n"
    ]
   },
   {
@@ -8182,101 +8231,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 195 entries, 0 to 194\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column               Non-Null Count  Dtype \n",
-      "---  ------               --------------  ----- \n",
-      " 0   Country              195 non-null    object\n",
-      " 1   Independence         195 non-null    object\n",
-      " 2   Independence From    195 non-null    object\n",
-      " 3   Main Colonial Power  195 non-null    object\n",
-      " 4   Continent            195 non-null    object\n",
-      "dtypes: object(5)\n",
-      "memory usage: 7.7+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "United Kingdom    64\n",
-       "France            26\n",
-       "Spain             23\n",
-       "Not Colonized     14\n",
-       "Portugal           7\n",
-       "Russia             7\n",
-       "Belgium            3\n",
-       "Italy              3\n",
-       "Netherlands        2\n",
-       "Germany            2\n",
-       "United States      1\n",
-       "Name: Main Colonial Power, dtype: int64"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data[data['Continent'] != 'Europe']['Main Colonial Power'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "United Kingdom    60\n",
-       "France            26\n",
-       "Spain             16\n",
-       "Not Colonized     10\n",
-       "Soviet Union       8\n",
-       "Portugal           6\n",
-       "United States      6\n",
-       "Belgium            3\n",
-       "Netherlands        2\n",
-       "Japan              2\n",
-       "Italy              2\n",
-       "Ethiopia           1\n",
-       "China              1\n",
-       "South Africa       1\n",
-       "Pakistan           1\n",
-       "Colombia           1\n",
-       "Australia          1\n",
-       "New Zealand        1\n",
-       "Malaysia           1\n",
-       "Sudan              1\n",
-       "Indonesia          1\n",
-       "Brazil             1\n",
-       "Name: Independence From, dtype: int64"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data[data['Continent'] != 'Europe']['Independence From'].value_counts()\n"
    ]
