--- a/Web Scraping/data.ipynb
+++ b/Web Scraping/data.ipynb
@@ -8174,12 +8174,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Changing some info for the .json"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Changing some info into lists for the .json\n",
+    "# Africa\n",
     "# Cameroon\n",
     "data.at[data[data['Country'] == 'Cameroon'].index[0],\n",
     "         'Main Colonial Power'] = ['Germany', 'France', 'United Kingdom']\n",
@@ -8206,6 +8214,12 @@
     "data.at[data[data['Country'] == 'Rwanda'].index[0],\n",
     "        'Main Colonial Power'] = ['Germany', 'Belgium']\n",
     "\n",
+    "# Asia\n",
+    "# Philippines\n",
+    "data.at[data[data['Country'] == 'Philippines'].index[0],\n",
+    "        'Main Colonial Power'] = ['Spain', 'United States']\n",
+    "\n",
+    "# Oceania\n",
     "# Vanuatu (Anglo-French Condominium)\n",
     "data.at[data[data['Country'] == 'Vanuatu'].index[0],\n",
     "        'Main Colonial Power'] = ['France', 'United Kingdom']\n"
@@ -8213,7 +8227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8231,29 +8245,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 195 entries, 0 to 194\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   Country              195 non-null    object\n",
+      " 1   Independence         195 non-null    object\n",
+      " 2   Independence From    195 non-null    object\n",
+      " 3   Main Colonial Power  195 non-null    object\n",
+      " 4   Continent            195 non-null    object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 7.7+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[data['Continent'] != 'Europe']['Main Colonial Power'].value_counts()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[data['Continent'] != 'Europe']['Independence From'].value_counts()\n"
    ]
   }
  ],
