--- a/Web Scraping/data.ipynb
+++ b/Web Scraping/data.ipynb
@@ -8170,7 +8170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('../data/colonialism.csv')"
+    "data.to_csv('../data/colonialism.csv', index=False)\n"
    ]
   },
   {
