Moved to main folder

--- a/colonialism.ipynb
+++ b/colonialism.ipynb
@@ -5,8 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Study project of web scraping by gathering data about colonialism using Wikipedia articles\n",
-    "- Gathered data will be used for a data visualization study project"
+    "- Study project of web scraping by gathering data about colonialism using Wikipedia articles"
    ]
   },
   {
@@ -8259,7 +8258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('../data/colonialism.csv', index=False)\n"
+    "data.to_csv('data/colonialism.csv', index=False)\n"
    ]
   },
   {
@@ -8364,7 +8363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/colonialism.json', 'w', encoding='utf-8') as file:\n",
+    "with open('data/colonialism.json', 'w', encoding='utf-8') as file:\n",
     "    data.to_json(file, force_ascii=False)\n"
    ]
   },
